Kubernetes/apps/adguard/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: adguard-auto-login
  namespace: home
spec:
  headers:
    customRequestHeaders:
      Authorization: "Basic REMOVED-ADGUARD-BASIC="
