Kubernetes/apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: home
  labels:
    app: adguard
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
        - name: adguard
          image: adguard/adguardhome:v0.107.79
          ports:
            - name: http
              containerPort: 3000
            - name: dns-tcp
              containerPort: 53
            - name: dns-udp
              containerPort: 53
              protocol: UDP
          volumeMounts:
            - name: data
              mountPath: /opt/adguardhome/conf
              subPath: conf
            - name: data
              mountPath: /opt/adguardhome/work
              subPath: work
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - NET_RAW

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: adguard-data
        - name: scripts
          configMap:
            name: adguard-scripts
            defaultMode: 0555
