Kubernetes/apps/adguard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: home
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dns.nerine.dev`)
      services:
        - name: adguard
          port: 3000
      middlewares:
        - name: public-chain
          namespace: traefik
        - name: authentik
          namespace: traefik
  tls:
    certResolver: letsencrypt
    domains:
      - main: nerine.dev
        sans:
          - "*.nerine.dev"
